# flow-lang

./: CMakeLists.txt  Makefile  README.md  build.bat
docs/: flow-v0-spec-and-semantics.md
examples/: demo.flow
examples/lib/: math.flow
include/: flow_ast.h  flow_interp.h  flow_lexer.h  flow_parse.h  flow_path.h  flow_token.h  flow_value.h
src/: ast.c  interp.c  lexer.c  main.c  parse.c  pathutil.c  value.c
vscode-flow/: .vscodeignore  extension.js  language-configuration.json  package.json  vscode-flow-0.1.0.vsix  vscode-flow-0.2.0.vsix  vscode-flow-0.2.1.vsix  vscode-flow-0.2.2.vsix
vscode-flow/syntaxes/: flow.tmLanguage.json
